# life

./: .flake8  .gitignore  README.md  pyproject.toml  requirements.txt  run.ps1
.github/workflows/: django.yml
app/: admin.py  models.py  services.py
app/admin/: __init__.py  account_admin.py  other_admin.py  transaction_admin.py
app/migrations/: 0001_initial.py  0002_account_is_active.py  0002_alter_transaction_transaction_time.py  0003_account_bank.py  0003_alter_transactioncategory_options.py  0004_bank_alter_account_bank.py  0004_eventtype_unique_event_name.py  0005_investment.py  0005_transactioncategory_color.py  0006_account_accounthistory.py  0006_alter_merchant_options_and_more.py  0007_accounttype_account_type.py  0007_utilitytype_utilitytransaction.py  0008_alter_accounthistory_record_date.py  0008_remove_utilitytransaction_transaction_type.py  0009_alter_accounthistory_account_amount.py  0009_alter_utilitytransaction_cost_per_day_and_more.py  0010_history_remove_accounthistory_record_date_and_more.py  0010_utilitytransaction_month_utilitytransaction_year.py  0011_accounttype_is_asset_accounttype_is_cash_and_more.py  0011_alter_history_options.py  0012_alter_accounthistory_unique_together.py  0013_alter_history_date.py  0014_alter_accounthistory_history.py  0015_alter_accounthistory_account_amount.py  0016_alter_history_date.py  0017_history_sum.py  0018_alter_history_sum.py  0021_report_reportline.py  (+3 more)
investment_journal/: admin.py  apps.py  models.py
life/: asgi.py  settings.py  urls.py  wsgi.py
mylife/: apps.py  models.py  services.py  utilities.py
(+36 files in other folders)
