[project]
name = "life"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "django==5.2.6",
    "django-admin-rangefilter==0.13.3",
    "django-import-export==4.3.9",
    "djangorestframework==3.16.1",
    "flake8==7.3.0",
    "pandas==2.3.2",
    "pandas-stubs==2.3.2.250827",
]
